--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -30,11 +30,11 @@
             app:layout_constraintVertical_bias="0.26" />
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ic_emergency_sign"
+            android:id="@+id/app_icon"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="24dp"
+            android:src="@drawable/ic_help"
             app:layout_constraintEnd_toEndOf="@+id/app_name_tv"
             app:layout_constraintStart_toStartOf="@+id/app_name_tv"
             app:layout_constraintTop_toBottomOf="@+id/app_name_tv"
