--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -55,6 +55,9 @@
             app:destination="@id/homeActivity"
             app:popUpTo="@id/signUpFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="userType"
+            app:argType="string" />
     </fragment>
     <activity
         android:id="@+id/homeActivity"
