--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -25,43 +25,40 @@
         android:id="@+id/loginFragment"
         android:name="com.afares.emergency.fragments.login.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
-        <action
-            android:id="@+id/action_loginFragment_to_signUpFragment"
-            app:destination="@id/userTypeFragment" />
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_homeActivity"
             app:destination="@id/homeActivity"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/userTypeFragment"
-        android:name="com.afares.emergency.fragments.signup.SignUpFragment"
-        android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_sign_up" >
         <action
-            android:id="@+id/action_signUpFragment_to_userTypeFragment"
-            app:destination="@id/signUpFragment"
-            app:popUpToInclusive="false" />
-    </fragment>
-    <fragment
-        android:id="@+id/signUpFragment"
-        android:name="com.afares.emergency.fragments.usertype.UserTypeFragment"
-        android:label="fragment_user_type"
-        tools:layout="@layout/fragment_user_type" >
-        <action
-            android:id="@+id/action_userTypeFragment_to_homeActivity"
-            app:destination="@id/homeActivity"
-            app:popUpTo="@id/signUpFragment"
-            app:popUpToInclusive="true" />
-        <argument
-            android:name="userType"
-            app:argType="string" />
+            android:id="@+id/action_loginFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
     </fragment>
     <activity
         android:id="@+id/homeActivity"
         android:name="com.afares.emergency.HomeActivity"
         android:label="activity_home"
         tools:layout="@layout/activity_home" />
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="com.afares.emergency.fragments.signup.SignUpFragment"
+        android:label="fragment_sign_up"
+        tools:layout="@layout/fragment_sign_up">
+        <action
+            android:id="@+id/action_signUpFragment_to_homeActivity"
+            app:destination="@id/homeActivity"
+            app:popUpTo="@id/signUpFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_signUpFragment_to_saviorActivity"
+            app:destination="@id/saviorActivity"
+            app:popUpTo="@id/signUpFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <activity
+        android:id="@+id/saviorActivity"
+        android:name="com.afares.emergency.SaviorActivity"
+        android:label="activity_savior"
+        tools:layout="@layout/activity_savior" />
 </navigation>
