--- a/app/src/main/res/navigation/home_nav.xml
+++ b/app/src/main/res/navigation/home_nav.xml
@@ -21,7 +21,7 @@
         tools:layout="@layout/fragment_history" />
     <fragment
         android:id="@+id/medicalHistoryFragment"
-        android:name="com.afares.emergency.MedicalHistoryFragment"
-        android:label="fragment_medical_history"
+        android:name="com.afares.emergency.fragments.medical.MedicalHistoryFragment"
+        android:label="@string/medical_history"
         tools:layout="@layout/fragment_medical_history" />
 </navigation>
