--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,6 +11,11 @@
         android:title="@string/help" />
 
     <item
+        android:id="@+id/medicalHistoryFragment"
+        android:icon="@drawable/ic_medical_file"
+        android:title="@string/medical_history" />
+
+    <item
         android:id="@+id/historyFragment"
         android:icon="@drawable/ic_history"
         android:title="@string/history" />
